prometheus.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prometheus
  name: deployment-prometheus
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-prometheus
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-prometheus
    spec:
      containers:
      - image: public.ecr.aws/eks-anywhere/prometheus/charts/prometheus:2.49.1-5565f1afed717ab164013be68ee283c0e9563076
        imagePullPolicy: Always
        name: prometheus
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: prometheus
  name: service-prometheus
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prometheus
  name: ingress-prometheus
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-prometheus
              port:
                number: 80
